Uploaded image for project: 'Apache HAWQ (Retired)'
  1. Apache HAWQ (Retired)
  2. HAWQ-229

External table can be altered, which make errors.

    XMLWordPrintableJSON

Details

    Description

      We can't use "alter external table" to alter an external table, but we can use "alter table" to alter an external table.

      mytest=# create external web table e4 (c1 int, c2 int) execute 'echo 1, 1' ON 2 format 'CSV';
      CREATE EXTERNAL TABLE
      mytest=# select * from e4;
       c1 | c2
      ----+----
        1 |  1
        1 |  1
      (2 rows)
      
      mytest=# alter table e4 drop column c2;
      WARNING:  "e4" is an external table. ALTER TABLE for external tables is deprecated.
      HINT:  Use ALTER EXTERNAL TABLE instead
      ALTER TABLE
      mytest=# select * from e4;
      ERROR:  extra data after last expected column  (seg0 localhost:40000 pid=57645)
      DETAIL:  External table e4, line 1 of execute:echo 1, 1: "1, 1"
      

      Attachments

        Activity

          People

            lei_chang Lei Chang
            doli Dong Li
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: