HAWQ-229. Forbid altering external table through altering table.