src/backend/commands/tablecmds.c
@@ -3522,29 +3522,11 @@ void ATVerifyObject(AlterTableStmt *stmt, Relation rel)
 	}
 	else if (RelationIsExternal(rel) && stmt->relkind != OBJECT_EXTTABLE)
 	{
-		/*
-		 * special case: in order to support 3.3 dumps with ALTER TABLE OWNER of
-		 * external tables, we will allow using ALTER TABLE (without EXTERNAL) 
-		 * temporarily, and use a deprecation warning. This should be removed
-		 * in future releases.
-		 */
-		if(stmt->relkind == OBJECT_TABLE)
-		{
-			if (Gp_role == GP_ROLE_DISPATCH) /* why are WARNINGs emitted from all segments? */
-				ereport(WARNING,
-						(errcode(ERRCODE_WRONG_OBJECT_TYPE),
-						 errmsg("\"%s\" is an external table. ALTER TABLE for external tables is deprecated.", RelationGetRelationName(rel)),
-						 errhint("Use ALTER EXTERNAL TABLE instead"),
-						 errOmitLocation(true)));						
-		}
-		else
-		{
-			ereport(ERROR,
-					(errcode(ERRCODE_WRONG_OBJECT_TYPE),
-					 errmsg("\"%s\" is an external table", RelationGetRelationName(rel)),
-					 errhint("Use ALTER EXTERNAL TABLE instead"),
-					 errOmitLocation(true)));			
-		}
+		ereport(ERROR,
+				(errcode(ERRCODE_WRONG_OBJECT_TYPE),
+				 errmsg("\"%s\" is an external table", RelationGetRelationName(rel)),
+				 errhint("Use ALTER EXTERNAL TABLE instead"),
+				 errOmitLocation(true)));
 	}
 	else if (!RelationIsExternal(rel) && !RelationIsForeign(rel) && stmt->relkind != OBJECT_TABLE)
 	{
